Blazingly fast median algo (java 8 edition)